--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <div class="img-responsive" style="background: url('./images/cynthia.png')no-repeat center;background-size:cover;"></div>
+            <div class="img" style="background: url('./images/cynthia.png')no-repeat center;background-size:cover;"></div>
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
               </div><!-- /.col-lg-4 -->
               <div class="col-lg-4">
 
-                <img src="./images/cyn.png" width="200" height="140" alt="" >
+                <img src="./images/cynthia.png" width="200" height="140" alt="" >
               
         
                 <h2>Heading</h2>
@@ -158,8 +158,8 @@
 
     <section>
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
-        <div class="col-10 col-sm-8 col-lg-6">
-          <img src="images/cynth1.jpeg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" loading="lazy" width="700" height="500">
+        <div class="col-10 col-sm-8 col-lg-6 align-items-center">
+          <img src="images/cyth3.jpeg" class="d-block mx-lg-auto img-fluid " alt="Bootstrap Themes" loading="lazy" width="700" height="500">
         </div>
         <div class="col-lg-6">
           <h1 class="display-5 fw-bold lh-1 mb-3">Responsive left-aligned hero with image</h1>
