--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>Hello, world!</title>
+    <title>Cynthia Wanja.</title>
   </head>
   <body>
 
@@ -111,7 +111,7 @@
             </div>
           </div>
           <div class="col-lg-6 ">
-            <div class="img" style="background: url('./images/cyth3.jpeg')no-repeat ;background-size:cover; width: 100%;"></div>
+            <img style="width: 100%; height: 100%;" src="images/cyth3.jpeg" alt="">
           </div>
         </div>
       </div>
