--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
 
-    <nav class="navbar  navbar-expand-lg navbar-light  shadow-sm " aria-label="Fifth navbar example" >
+    <nav class="navbar  navbar-expand-lg navbar-light  shadow" aria-label="Fifth navbar example" >
         <div class="container-fluid ">
           <a class="navbar-brand text-black" href="#">  <ion-icon name="leaf-outline"></ion-icon>
             Cynthia Wanja.
@@ -88,7 +88,7 @@
     </section> -->
 
 
-    <section >
+   
       <div class="half-half-image-text">
       <div class="container">
         <div class="row">
@@ -111,20 +111,21 @@
             </div>
           </div>
           <div class="col-lg-6 ">
-            <img style="width: 100%; height: 100%;" src="images/cyth3.jpeg" alt="">
+            <img style="width: 100%; height: 400px;" src="images/cyth3.jpeg" alt="">
           </div>
         </div>
       </div>
         </div>
-    </section>
+   
     
 
 
-    <section>
+    <section style="background: white;">
       
 
 
-      <div class="row text-center">
+      <div class="row text-center " >
+         <h2> We Excel In The Following Fields.</h2>
         <div class="col-sm-4">
           <div class="card mb-3">
             <img src="images/C2.jpg" class="card-img-top" alt="...">
@@ -150,7 +151,7 @@
 
 
 
-        <div class="col-sm-4">
+        <div class="col-sm-4 width:18rem;">
           <div class="card mb-3">
             <img src="images/C3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -238,7 +239,7 @@
 </section>
 
 
-<section class="ftco-section">
+<section class="ftco-section" style="background: white;">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6 text-center mb-5">
