--- a/index.html
+++ b/index.html
@@ -175,10 +175,10 @@
 
 
     <section>
-      <div class="row flex-lg-row-reverse  g-5 ">
-        <div class="col-10 col-sm-12 col-lg-6 ">
-          <img class="rounded " style="width: 100%; padding-top: 200px; " src="images/cyth4.jpeg"  loading="lazy"  >
-        </div>
+      <div class="container row flex-lg-row-reverse  g-5 ">
+        <!-- <div class="col-lg-6">
+          <img class="rounded " style="width: 100%; height: 300px; padding-top: 200px; " src="images/cyth4.jpeg"  loading="lazy"  >
+        </div> -->
         <div class="col-lg-6">
           <p style="font-size: 30px;"> About us.</p>
           <h1 class="display-5 fw-bold lh-1 mb-3">Allow Us to Take Care of your Events, Your Team, And Your Little Ones As Well.</h1>
